--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div id="banner">
         <div class="container">
             <h2>module</h2>
-            <h1>The best view comes after the hardest climb.</h1>
+            <h1>About Module</h1>
             <p>HandCrafted by
                 <a href="">FreeHTML%.co</a>
             </p>
@@ -32,10 +32,10 @@
             <nav class="col-sm-8">
                 <ul>
                     <li>
-                        <a href="">home</a>
+                        <a href="index.html">home</a>
                     </li>
                     <li>
-                        <a href="about.html">about</a>
+                        <a href="">about</a>
                     </li>
                     <li>
                         <a href="blog.html">blog</a>
@@ -50,7 +50,7 @@
     <main style="background: #f4f4f4">
         <div id="business">
             <div class="container">
-                <h1 class="title">Business to the next level</h1>
+                <h1 class="title">our history</h1>
                 <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
                     texts.
                 </p>
@@ -126,47 +126,13 @@
                 </div>
             </div>
         </div>
-        <div id="our-gallery">
-            <div class="container">
-                <h1 class="title">Our gallery</h1>
-                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
-                    texts.
-                </p>
-                <div class="col">
-                    <div class="img-left" style="background:url('img/cover_bg_2.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-                    <div class=" img-right" style="background:url('img/cover_bg_3.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-
-                </div>
-                <div class="col">
-
-                    <div class=" img-right" style="background:url('img/cover_bg_2.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-                    <div class="img-left" style="background:url('img/blog-1.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-
-                </div>
-                <br>
-                <button class="btn btn-success">see gallery</button>
-
-            </div>
-        </div>
-        <div id="our-team">
+        <div id="our-team" style="background: #f4f4f4">
             <div class="container">
                 <h1 class="title">our team</h1>
                 <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
                     texts.
                 </p>
-                <div class="box">
+                <div class="box" style="background: #ffffff">
                     <img src="img/person_1.png" alt="">
                     <h1>Jean doe, XYZ Co</h1>
                     <h2>
@@ -176,7 +142,7 @@
                         blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
                         blind texts.</p>
                 </div>
-                <div class="box">
+                <div class="box" style="background: #ffffff">
                     <img src="img/person_2.png" alt="">
                     <h1>Jean doe, XYZ Co</h1>
                     <h2>
@@ -186,7 +152,7 @@
                         blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
                         blind texts.</p>
                 </div>
-                <div class="box">
+                <div class="box" style="background: #ffffff">
                     <img src="img/person_3.png" alt="">
                     <h1>Jean doe, XYZ Co</h1>
                     <h2>
@@ -196,100 +162,36 @@
                         blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
                         blind texts.</p>
                 </div>
-            </div>
-        </div>
-        <div id="our-experties">
-            <div class="container">
-                <h1 class="title">our experties</h1>
-                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
-                    texts.
-                </p>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
+                <div class="box" style="background: #ffffff">
+                    <img src="img/person_1.png" alt="">
+                    <h1>Jean doe, XYZ Co</h1>
+                    <h2>
+                        <i>Designer</i>
+                    </h2>
                     <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
                         blind texts.</p>
                 </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
+                <div class="box" style="background: #ffffff">
+                    <img src="img/person_2.png" alt="">
+                    <h1>Jean doe, XYZ Co</h1>
+                    <h2>
+                        <i>Designer</i>
+                    </h2>
                     <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
                         blind texts.</p>
                 </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
+                <div class="box" style="background: #ffffff">
+                    <img src="img/person_3.png" alt="">
+                    <h1>Jean doe, XYZ Co</h1>
+                    <h2>
+                        <i>Designer</i>
+                    </h2>
                     <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
+                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
                         blind texts.</p>
                 </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-            </div>
-        </div>
-        <div id="blog">
-            <div class="container">
-                <h1 class="title">recent from blog</h1>
-                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
-                    texts.
-                </p>
-                <div class="card">
-                    <img src="img/cover_bg_1.jpg" alt="blog">
-                    <div class="infor">
-                        <h1>Web Design for the Future</h1>
-                        <h2>
-                            <i>Sep, 15th</i>
-                        </h2>
-                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
-                            the blind texts.
-                        </p>
-                        <a href="">learn more...</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/cover_bg_2.jpg" alt="blog">
-                    <div class="infor">
-                        <h1>Web Design for the Future</h1>
-                        <h2>
-                            <i>Sep, 15th</i>
-                        </h2>
-                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
-                            the blind texts.
-                        </p>
-                        <a href="">learn more...</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/cover_bg_3.jpg" alt="blog">
-                    <div class="infor">
-                        <h1>Web Design for the Future</h1>
-                        <h2>
-                            <i>Sep, 15th</i>
-                        </h2>
-                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
-                            the blind texts.
-                        </p>
-                        <a href="">learn more...</a>
-                    </div>
-                </div>
-
-
-                <button class="btn btn-success">our blog</button>
             </div>
         </div>
     </main>
