--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <div id="banner">
+    <div id="banner-blog" >
         <div class="container">
             <h2>module</h2>
-            <h1>The best view comes after the hardest climb.</h1>
+            <h1>Our Blog</h1>
             <p>HandCrafted by
                 <a href="">FreeHTML%.co</a>
             </p>
@@ -32,13 +32,13 @@
             <nav class="col-sm-8">
                 <ul>
                     <li>
-                        <a href="">home</a>
+                        <a href="index.html">home</a>
                     </li>
                     <li>
                         <a href="about.html">about</a>
                     </li>
                     <li>
-                        <a href="blog.html">blog</a>
+                        <a href="">blog</a>
                     </li>
                     <li>
                         <a href="contact.html">contact</a>
@@ -47,207 +47,52 @@
             </nav>
         </div>
     </header>
-    <main style="background: #f4f4f4">
-        <div id="business">
-            <div class="container">
-                <h1 class="title">Business to the next level</h1>
-                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
-                    texts.
-                </p>
-                <img src="img/blog-2.jpg" alt="blog">
-                <div class="card">
-                    <h1>argular JS</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="card">
-                    <h1>node JS</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="card">
-                    <h1>Django Python</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <br>
-                <button class="btn btn-success"><i class="fa fa-caret-right"></i>   watch our video</button>
-            </div>
-        </div>
-        <div id="boxes">
-            <div class="container">
-                <div class="box">
-                    <i class="fa fa-gg"></i>
-                    <div class="infor">
-                        <h1>marketing</h1>
-                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
-                        <a href="">Learn more</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <i class="fa fa-snowflake-o"></i>
-                    <div class="infor">
-                        <h1>search engine</h1>
-                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
-                        <a href="">Learn more</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <i class="fa fa-folder-o"></i>
-                    <div class="infor">
-                        <h1>earn money</h1>
-                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
-                        <a href="">Learn more</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <i class="fa fa-glass"></i>
-                    <div class="infor">
-                        <h1>entrepreneur</h1>
-                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
-                        <a href="">Learn more</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <i class="fa fa-balance-scale"></i>
-                    <div class="infor">
-                        <h1>stragic plan</h1>
-                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
-                        <a href="">Learn more</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <i class="fa fa-comment-o"></i>
-                    <div class="infor">
-                        <h1>support</h1>
-                        <p>Facills ispum reprehendent nemo motestias.Aut cum mollitia reprehenderit.</p>
-                        <a href="">Learn more</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="our-gallery">
-            <div class="container">
-                <h1 class="title">Our gallery</h1>
-                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
-                    texts.
-                </p>
-                <div class="col">
-                    <div class="img-left" style="background:url('img/cover_bg_2.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-                    <div class=" img-right" style="background:url('img/cover_bg_3.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-
-                </div>
-                <div class="col">
-
-                    <div class=" img-right" style="background:url('img/cover_bg_2.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-                    <div class="img-left" style="background:url('img/blog-1.jpg');">
-                        <h2>creative</h2>
-                        <h1 class="street">Wal in the wooden street</h1>
-                    </div>
-
-                </div>
-                <br>
-                <button class="btn btn-success">see gallery</button>
-
-            </div>
-        </div>
-        <div id="our-team">
-            <div class="container">
-                <h1 class="title">our team</h1>
-                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
-                    texts.
-                </p>
-                <div class="box">
-                    <img src="img/person_1.png" alt="">
-                    <h1>Jean doe, XYZ Co</h1>
-                    <h2>
-                        <i>Designer</i>
-                    </h2>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <img src="img/person_2.png" alt="">
-                    <h1>Jean doe, XYZ Co</h1>
-                    <h2>
-                        <i>Designer</i>
-                    </h2>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <img src="img/person_3.png" alt="">
-                    <h1>Jean doe, XYZ Co</h1>
-                    <h2>
-                        <i>Designer</i>
-                    </h2>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-            </div>
-        </div>
-        <div id="our-experties">
-            <div class="container">
-                <h1 class="title">our experties</h1>
-                <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
-                    texts.
-                </p>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-                <div class="box">
-                    <i class="fa fa-heart-o"></i>
-                    <h1>web design</h1>
-                    <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the
-                        blind texts.</p>
-                </div>
-            </div>
-        </div>
-        <div id="blog">
+    <main >
+        <div id="blog" style="background: #f4f4f4">
             <div class="container">
                 <h1 class="title">recent from blog</h1>
                 <p class="description">Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live the blind
                     texts.
                 </p>
+                <div class="card">
+                    <img src="img/cover_bg_1.jpg" alt="blog">
+                    <div class="infor">
+                        <h1>Web Design for the Future</h1>
+                        <h2>
+                            <i>Sep, 15th</i>
+                        </h2>
+                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
+                            the blind texts.
+                        </p>
+                        <a href="">learn more...</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/cover_bg_2.jpg" alt="blog">
+                    <div class="infor">
+                        <h1>Web Design for the Future</h1>
+                        <h2>
+                            <i>Sep, 15th</i>
+                        </h2>
+                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
+                            the blind texts.
+                        </p>
+                        <a href="">learn more...</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/cover_bg_3.jpg" alt="blog">
+                    <div class="infor">
+                        <h1>Web Design for the Future</h1>
+                        <h2>
+                            <i>Sep, 15th</i>
+                        </h2>
+                        <p>Far far alway,behind the word mountains, far from the countries Vokana and Consonantia, there live
+                            the blind texts.
+                        </p>
+                        <a href="">learn more...</a>
+                    </div>
+                </div>
                 <div class="card">
                     <img src="img/cover_bg_1.jpg" alt="blog">
                     <div class="infor">
